log
Sat, Apr 23, 2022  7:37:05 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
56c4b48
Sat, Apr 23, 2022  7:38:03 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7bb44c7
Sat, Apr 23, 2022  8:02:22 PM: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|7
total_score: 5/70
f27fbc6
Sat, Apr 23, 2022  8:11:06 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
713ab55
Sat, Apr 23, 2022  8:14:26 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
02c2166
Sat, Apr 23, 2022  8:34:50 PM: 
 treemap.c | 39 +++++++++++++++++++++++++++++++++++++--
 1 file changed, 37 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
945e03e
Sat, Apr 23, 2022  8:35:40 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
cf34dd2
Sat, Apr 23, 2022  8:48:49 PM: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
27783d5
Sat, Apr 23, 2022  9:18:32 PM: 
 treemap.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 64 insertions(+)
 tests:  0|0
c99c40e
Sat, Apr 23, 2022  9:19:56 PM: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  16|4
total_score: 30/70
c1163b0
Sat, Apr 23, 2022  9:24:50 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
   [ INFO ] eliminando dato con clave 5239 (nodo con dos hijos)
1a083e2
Sat, Apr 23, 2022  9:36:13 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
b10e65b
Sat, Apr 23, 2022  9:37:41 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
   [ INFO ] eliminando dato con clave 5239 (nodo con dos hijos)
4e4388e
Sat, Apr 23, 2022  9:46:10 PM: 
 treemap.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
 tests:  17|4
total_score: 35/70
4e549bc
Sat, Apr 23, 2022  9:58:46 PM: 
 treemap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  0|0
aefb0e5
Sat, Apr 23, 2022 10:05:47 PM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
0a85cc6
Sat, Apr 23, 2022 10:07:22 PM: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  18|3
total_score: 40/70
5c04470
Sun, Apr 24, 2022  3:29:32 PM: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  20|2
total_score: 45/70
fc5e825
Sun, Apr 24, 2022  3:38:44 PM: 
 treemap.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:234:19: error: unused variable 'aux' [-Werror=unused-variable]
         TreeNode* aux = tree->current;
                   ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
f8628f0
Sun, Apr 24, 2022  3:39:10 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
23753ff
Sun, Apr 24, 2022  3:40:37 PM: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  22|2
total_score: 50/70
aa9ed2d
Sun, Apr 24, 2022  3:48:16 PM: 
 treemap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:231:54: error: implicit declaration of function 'lower_than_int' [-Werror=implicit-function-declaration]
         while (aux != NULL && aux->parent != NULL && lower_than_int(aux->parent, aux) == 1)
                                                      ^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
578dee1
Sun, Apr 24, 2022  3:49:05 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
c6d5515
Sun, Apr 24, 2022  3:51:00 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  23|2
total_score: 50/70
e8d2142
Sun, Apr 24, 2022  3:55:27 PM: 
 treemap.c | 22 ++++++++++------------
 1 file changed, 10 insertions(+), 12 deletions(-)
 tests:  22|2
total_score: 50/70
2c6278f
Sun, Apr 24, 2022  3:55:55 PM: 
 treemap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  23|2
total_score: 50/70
7095b67
Sun, Apr 24, 2022  4:03:46 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
d051f06
Sun, Apr 24, 2022  4:09:41 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  24|1
total_score: 50/70
98b0a63
Sun, Apr 24, 2022  4:13:40 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
5bd6fc2
